--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,12 +5,17 @@ homepage: https://github.com/zkayia/egsfree
 issue_tracker: https://github.com/zkayia/egsfree/issues
 repository: https://github.com/zkayia/egsfree
 
+publish_to: none
+
 environment:
   sdk: '>=2.16.1 <3.0.0'
 
 dependencies:
   args: ^2.3.0
   dolumns: ^2.0.0
+  version: ^2.0.0
+  binary_updater:
+    git: https://github.com/zkayia/binary_updater
 
 dev_dependencies:
   lints: ^1.0.0
