--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,15 +8,15 @@ repository: https://github.com/zkayia/egsfree
 publish_to: none
 
 environment:
-  sdk: '>=2.16.1 <3.0.0'
+  sdk: '>=2.17.0 <3.0.0'
 
 dependencies:
   args: ^2.3.0
-  dolumns: ^2.0.0
-  version: ^2.0.0
   binary_updater:
     git: https://github.com/zkayia/binary_updater
+  collection: ^1.16.0
+  dolumns: ^2.0.0
+  version: ^3.0.2
 
 dev_dependencies:
-  lints: ^1.0.0
-  test: ^1.16.0
+  lints: ^2.0.0
